--- a/portfolio.html
+++ b/portfolio.html
@@ -17,51 +17,58 @@
 
     <div>
         <h2 class="t2">About Me</h2>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae exercitationem sapiente minus
-            cupiditate! Provident, architecto culpa cum, quia consequuntur, illum accusamus sunt inventore modi ipsum
-            accusantium vitae molestias quaerat voluptas?</p>
+        <p>  I'm a full stack developer based in Nairobi,Kenya.
+            I have a passion for frontend and backend devepment 
+            and mobile responsive designs. 
+            
+            Went to moringa school to learn web development and software engineering.
+            
+            I can design a web site, use git and github
+            for collaboration with other developers and host
+            my projects on github pages.?</p>
     </div>
     <div class="t3">
 
         <h3>Education Background</h3>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae exercitationem sapiente minus
-            cupiditate! Provident, architecto culpa cum, quia consequuntur, illum accusamus sunt inventore modi ipsum
-            accusantium vitae molestias quaerat voluptas?</p>
+        <p> University of Nairobi student curently pursuing a bachelor's Degree in Computer Science and an aspiring
+            goal-driven web developer</p>
 
     </div>
     <div class="t4">
         <h3> What i have done</h3>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae exercitationem sapiente minus
-            cupiditate! Provident, architecto culpa cum, quia consequuntur, illum accusamus sunt inventore modi ipsum
-            accusantium vitae molestias quaerat voluptas?</p>
+        <p> These are few among many projects i have done.you can have a look. **Developed using html and css techs</p>
 
 
     </div>
     <div class="t5">
-        <h4><a href="pic.html">Pictures</a> </h4>
-        <h6><a href="projects.html">My projects</a> </h6>
+        <h4><a href="pic.html">Click here to view my pictures</a> </h4>
+        <h6><a href="projects.html">Click here to view my project</a> </h6>
         <div class="contacts row">
 
-            <div class="column">
-                <img src="https://img.icons8.com/color/48/000000/twitter.png">Twitter
-                <p>@ma5755333 </p>
+            <div class="column"><img src="https://img.icons8.com/color/48/000000/twitter.png">
+                <a href="https://twitter.com/ma5755333?s=08">@ma5755333</a>
             </div>
             <div class="column">
-                <img src="https://img.icons8.com/color/48/000000/instagram-new.png" alt=""> Instagram
-                <a href="">mussys_mustapha</a>
+                <img src="https://img.icons8.com/color/48/000000/instagram-new.png" alt="">
+                <a href="https:/www.instagram.com/mussys_mustapha">mussys_mustapha</a>
             </div>
             <div class="column">
-                <img src="phoone.png" alt="width=50px" height="48px"> contact
-                <p>0723266163</p>
+                <img src="gmail.png" alt="">
+                <a href="http://www.gmail.com/.">ma5755333@gmail.com</a>
+            </div>
+            <div class="column">
+                <img src="phonee.png" alt="width=50px" height="48px"> contact
+                <a href="tel:0-723-266-163"> 0723266163</a>    
             </div>
 
         </div>
 
 
         <h5><img src="23-232715_copyright-symbol-transparent-image-copyright-logo-transparent-background" alt="">
-            copyright 2019 </h5>
+            Copyright {2019} Mustafa Ahmed Ibrahim </h5>
 
     </div>
+
 </body>
 
 </html>
