--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,12 @@
 
     <div>
         <h2 class="t2">About Me</h2>
-        <p>  I'm a full stack developer based in Nairobi,Kenya.
+        <p> I'm a full stack developer based in Nairobi,Kenya.
             I have a passion for frontend and backend devepment 
             and mobile responsive designs. 
-            
-            Went to moringa school to learn web development and software engineering.
-            
+
+           Currently at moringa school to learn web development and software engineering.
+
             I can design a web site, use git and github
             for collaboration with other developers and host
             my projects on github pages.?</p>
@@ -36,7 +36,7 @@
     </div>
     <div class="t4">
         <h3> What i have done</h3>
-        <p> These are few among many projects i have done.you can have a look. **Developed using html and css techs</p>
+        <p> These are few among many projects i have done you can view it below.Developed using html and css techs</p>
 
 
     </div>
@@ -58,7 +58,7 @@
             </div>
             <div class="column">
                 <img src="phonee.png" alt="width=50px" height="48px"> contact
-                <a href="tel:0-723-266-163"> 0723266163</a>    
+                <a href="tel:0-723-266-163"> 0723266163</a>
             </div>
 
         </div>
