--- a/index.html
+++ b/index.html
@@ -10,47 +10,52 @@
 
 <body>
     <div class="t1">
-        <h1> <img src="tac.jpg" alt="" width="150px" height="120px" > I'm Mustafa</h1>
+        <h1> <img src="tac.jpg" alt="" width="150px" height="120px"> I'm Mustafa</h1>
         <p>Web Developer</p>
 
     </div>
 
     <div>
         <h2 class="t2">About Me</h2>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae exercitationem sapiente minus
-            cupiditate! Provident, architecto culpa cum, quia consequuntur, illum accusamus sunt inventore modi ipsum
-            accusantium vitae molestias quaerat voluptas?</p>
+        <p> 'm a full stack developer based in Nairobi,Kenya.
+            I have a passion for frontend and backend devepment 
+            and mobile responsive designs. 
+
+            Currently at moringa school to learn web development and software engineering.
+
+            I can design a web site, use git and github
+            for collaboration with other developers and host
+            my projects on github pages.</p>
     </div>
     <div class="t3">
 
         <h3>Education Background</h3>
-        <p> University of Nairobi student curently  pursuing a bachelor's Degree in Computer Science and an aspiring goal-driven web developer</p>
+        <p> University of Nairobi student curently pursuing a bachelor's Degree in Computer Science and an aspiring
+            goal-driven web developer</p>
 
     </div>
     <div class="t4">
         <h3> What i have done</h3>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae exercitationem sapiente minus
-            cupiditate! Provident, architecto culpa cum, quia consequuntur, illum accusamus sunt inventore modi ipsum
-            accusantium vitae molestias quaerat voluptas?</p>
+        <p> These are few among many projects i have done.you can have a look at in </p>
 
 
     </div>
     <div class="t5">
-        <h4><a href="pic.html">Pictures</a> </h4>
-        <h6><a href="projects.html">My projects</a> </h6>
+        <h4><a href="pic.html">Click here to view my Pictures</a> </h4>
+        <h6><a href="projects.html">Click here to view my Projects</a> </h6>
         <div class="contacts row">
 
             <div class="column"><img src="https://img.icons8.com/color/48/000000/twitter.png">
                 <a href="https://twitter.com/ma5755333?s=08">@ma5755333</a>
             </div>
             <div class="column">
-                <img src="https://img.icons8.com/color/48/000000/instagram-new.png" alt=""> 
+                <img src="https://img.icons8.com/color/48/000000/instagram-new.png" alt="">
                 <a href="https:/www.instagram.com/mussys_mustapha">mussys_mustapha</a>
             </div>
             <div class="column">
-                    <img src="https://img.icons8.com/color/48/000000/instagram-new.png" alt=""> 
-                    <a href="ma5755333@gmail.com">ma5755333@gmail.com</a>
-                </div>
+                <img src="https://img.icons8.com/color/48/000000/instagram-new.png" alt="">
+                <a href="ma5755333@gmail.com">ma5755333@gmail.com</a>
+            </div>
             <div class="column">
                 <img src="phonee.png" alt="width=50px" height="48px"> contact
                 <p href="0723266163">0723266163</p>
