--- a/portfolio.html
+++ b/portfolio.html
@@ -21,11 +21,14 @@
             I have a passion for frontend and backend devepment 
             and mobile responsive designs. 
 
-           Currently at moringa school to learn web development and software engineering.
+            Currently at moringa school to learn web development and software engineering.
 
             I can design a web site, use git and github
             for collaboration with other developers and host
-            my projects on github pages.?</p>
+            my projects on github pages</p>
+        <p>My hobbies are Swimming,Hiking and Travelling.
+        </p>
+        <p>My huge intrest is learing new things on Technology</p>
     </div>
     <div class="t3">
 
@@ -41,8 +44,8 @@
 
     </div>
     <div class="t5">
-        <h4><a href="pic.html">Click here to view my pictures</a> </h4>
-        <h6><a href="projects.html">Click here to view my project</a> </h6>
+        <h4><a href="pic.html">Click here to view my Gallery</a> </h4>
+        <h6><a href="projects.html">Click here to view my projects in Github</a> </h6>
         <div class="contacts row">
 
             <div class="column"><img src="https://img.icons8.com/color/48/000000/twitter.png">
