--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
                 <a href="https:/www.instagram.com/mussys_mustapha">mussys_mustapha</a>
             </div>
             <div class="column">
-                <img src="gmail.png" alt="">
+                <img src="gmail.png">
                 <a href="http://www.gmail.com/.">ma5755333@gmail.com</a>
             </div>
             <div class="column">
