--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                 <a href="http://www.gmail.com/.">ma5755333@gmail.com</a>
             </div>
             <div class="column">
-                <img src="phonee.png" alt="width=50px" height="48px"> contact
+                <img src="phonee.png" alt="width=50px" height="48px"> 
                 <a href="tel:0-723-266-163"> 0723266163</a>
             </div>
 
