--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div>
         <h2 class="t2">About Me</h2>
-        <p> 'm a full stack developer based in Nairobi,Kenya.
+        <p> I'm a full stack developer based in Nairobi,Kenya.
             I have a passion for frontend and backend devepment 
             and mobile responsive designs. 
 
@@ -25,7 +25,10 @@
 
             I can design a web site, use git and github
             for collaboration with other developers and host
-            my projects on github pages.</p>
+            my projects on github pages</p>
+        <p>My hobbies are Swimming,Hiking and Travelling.
+        </p>
+        <p>My huge intrest is learing new things on Technology</p>
     </div>
     <div class="t3">
 
@@ -36,13 +39,13 @@
     </div>
     <div class="t4">
         <h3> What i have done</h3>
-        <p> These are few among many projects i have done.you can have a look at in </p>
+        <p> These are few among many projects i have done you can view it below.Developed using html and css techs</p>
 
 
     </div>
     <div class="t5">
-        <h4><a href="pic.html">Click here to view my Pictures</a> </h4>
-        <h6><a href="projects.html">Click here to view my Projects</a> </h6>
+        <h4><a href="pic.html">Click here to view my Gallery</a> </h4>
+        <h6><a href="projects.html">Click here to view my projects in Github</a> </h6>
         <div class="contacts row">
 
             <div class="column"><img src="https://img.icons8.com/color/48/000000/twitter.png">
@@ -53,12 +56,12 @@
                 <a href="https:/www.instagram.com/mussys_mustapha">mussys_mustapha</a>
             </div>
             <div class="column">
-                <img src="https://img.icons8.com/color/48/000000/instagram-new.png" alt="">
-                <a href="ma5755333@gmail.com">ma5755333@gmail.com</a>
+                <img src="gmail.png">
+                <a href="http://www.gmail.com/.">ma5755333@gmail.com</a>
             </div>
             <div class="column">
-                <img src="phonee.png" alt="width=50px" height="48px"> contact
-                <p href="0723266163">0723266163</p>
+                <img src="phonee.png" alt="width=50px" height="48px">
+                <a href="tel:0-723-266-163"> 0723266163</a>
             </div>
 
         </div>
@@ -68,6 +71,7 @@
             Copyright {2019} Mustafa Ahmed Ibrahim </h5>
 
     </div>
+
 </body>
 
 </html>
